test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Project_ID/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Fri, 08 Aug 2025 11:04:37 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="BP3dIYtYcgAmbAvm1A8raj9yuTy1c2SZ", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}